# jb_api

./: .env.dev.example  .env.prod.example  .gitignore  Cargo.toml  README.md  compose.yaml  cspell.config.yaml  dockerfile  example.env  manage.py
Postman Collections/: postman.json
assets/emails/: budget.html  dump.html  password.html
exports/: users.xlsx
jb/: apps.py  models.py  pagination.py  serializer.py  urls.py
jb/migrations/: 0001_initial.py  0002_alter_item_cut_percent_alter_item_value_meter_and_more.py  0003_customuser.py  0004_alter_item_weight_kg_no_cut.py
jb/views/: auth.py  brand.py  item.py  product.py  users.py
jb_api/: asgi.py  settings.py  urls.py  wsgi.py
migration/: Cargo.toml
migration/src/: lib.rs  m20260304_124432_create_users_table.rs  m20260304_142033_add_token_to_user.rs  m20260305_132645_add_created_updated_at_to_users.rs  m20260306_130733_add_roles.rs  m20260306_132055_add_roles_fk_users.rs  m20260307_135800_create_class.rs  m20260307_141844_create_types.rs  m20260307_142040_create_brands.rs  m20260307_142334_create_images.rs  m20260307_143229_create_products.rs  m20260307_144941_create_products_images_junction.rs  m20260316_131520_nullable_cols.rs  m20260316_132307_add_brand_to_product.rs  m20260316_184710_products_weight_to_decimal.rs  m20260319_134858_products_new_fields.rs  m20260418_151752_auto_add_roles.rs  m20260418_152857_auto_add_master_user.rs  m20260420_164641_clients.rs  m20260422_125320_budget_table.rs  m20260423_003553_brands_images.rs  m20260423_174904_add_clients_email.rs  m20260423_180701_delete_budget_cascade.rs  m20260424_125643_add_users_email.rs  m20260424_194432_password_reset_tokens.rs  main.rs
src/: config.rs  main.rs
src/database/: connect_to_db.rs  database.md  mod.rs
src/dto/: dto.md  mod.rs
src/dto/brands/: create.rs  create_brand.rs  get.rs  get_all.rs  mod.rs  update.rs
src/dto/budget/: create.rs  get_per_client.rs  mod.rs
src/dto/classes/: create.rs  get.rs  get_all.rs  get_class.rs  mod.rs  update.rs  update_class.rs
src/dto/clients/: available.rs  create.rs  get.rs  get_all.rs  mod.rs  update.rs
src/dto/products/: create.rs  get.rs  get_all.rs  mod.rs  readjust_price.rs  update.rs
src/dto/shared/: mod.rs  pagination.rs  responses.rs
src/dto/types/: create.rs  create_type.rs  get.rs  get_all.rs  get_types.rs  mod.rs  update.rs  update_type.rs
src/dto/users/: create_user.rs  forgot_password.rs  login_user.rs  mod.rs  reset_password.rs  send_forgot_password.rs  update.rs
src/entities/: brands.rs  brands_images.rs  budgets.rs  classes.rs  clients.rs  images.rs  mod.rs  prelude.rs  products.rs  products_images.rs  reset_password_tokens.rs  roles.rs  sea_orm_active_enums.rs  types.rs  users.rs
src/governors/: dump.rs  governors.md  mod.rs  registry.rs
src/handlers/: handlers.md  mod.rs
src/handlers/brands/: block.rs  create.rs  create_brand.rs  delete.rs  get.rs  get_all.rs  mod.rs  update.rs
src/handlers/budget/: create.rs  delete.rs
src/handlers/budgets/: count.rs  create.rs  delete.rs  get_per_client.rs  mod.rs
src/handlers/classes/: block.rs  create.rs  delete.rs  delete_class.rs  get.rs  get_all.rs  get_class.rs  get_classes.rs  mod.rs  update.rs
src/handlers/clients/: available.rs  block.rs  create.rs  delete.rs  export.rs  get.rs  get_all.rs  mod.rs  update.rs
src/handlers/database/: dump.rs
src/jobs/: clear_dumps.rs  clear_reset_password_tokens.rs  jobs.md  mod.rs  scheduler.rs
src/mailer/: mailer.md  mailer.rs
src/middlewares/: auth.rs  middleware.md  role.rs
src/routes/: config.rs  mod.rs  routes.md
static/: index.html
(+61 files in other folders)
