[package]
name = "jb_api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
sea-orm = { version = "2.0.0-rc.35", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
log = "0.4.22"
dotenv = "0.15"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
migration = { path = "migration" }
