[package]
name = "jb_api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
sea-orm = { version = "2.0.0-rc.35", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
log = "0.4.22"
dotenv = "0.15"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
rust_xlsxwriter = { version = "*", features = ["chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
actix-web-httpauth = "0.8"
migration = { path = "migration" }
env_logger = "0.11.8"
actix-multipart = "0.7.2"
mime = "0.3.17"
tokio = "1.50.0"
futures = "0.3.32"
typst = "0.14.2"
typst-as-lib = "0.15.4"
typst-pdf = "0.14.2"
lettre = "0.11.21"
tokio-cron-scheduler = { version = "*", features = ["signal"] }
image = "0.25.10"
actix-governor = "0.10.0"
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
static-files = "0.3.1"

[build-dependencies]
static-files = "0.3.1"
