[package]
edition = "2024"
name = "migration"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
dotenv = "0.15"
argon2 = "0.5.3"

[dependencies.sea-orm-migration]
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
version = "2.0.0-rc.35"
